suite/tests/decls/valid/static-func-int.c
int main(void)
{
    static int a;
}
