suite/tests/decls/invalid/too-many-statics.c
int main(void)
{
    static static int a;
}
